# ipdis

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml
api/: Cargo.toml
api/common/: Cargo.toml
api/common/src/: client.rs  config.rs
api/examples/: bench.rs  bench_raw.rs  bench_s3.rs  io.rs  io_client.rs  io_local.rs  io_remote.rs
api/native/: Cargo.toml
api/persistent/common/: Cargo.toml
api/persistent/common/src/: lib.rs
api/persistent/ipfs/: Cargo.toml
api/persistent/ipfs/src/: lib.rs
api/persistent/local/: Cargo.toml
api/persistent/local/src/: lib.rs
api/persistent/s3/: Cargo.toml
api/persistent/s3/src/: lib.rs
api/persistent/temp/: Cargo.toml
api/persistent/temp/src/: lib.rs
api/s3/: Cargo.toml
api/s3/src/: lib.rs
api/src/: lib.rs  server.rs
api/wasi/: Cargo.toml
common/: Cargo.toml
common/src/: lib.rs
modules/bench/: Cargo.toml
modules/bench/src/: main.rs
modules/bench/src/io/: inputs.rs  outputs.rs
modules/bench/src/protocol/: ipfs.rs  ipiis.rs  local.rs  mod.rs  s3.rs
modules/gdown/: Cargo.toml
modules/gdown/examples/: download.rs  large.rs  small.rs
modules/gdown/src/: lib.rs
modules/ipfs/: README.md
modules/ipfs/gateway/: Cargo.toml
modules/ipfs/gateway/src/: main.rs
modules/local/: Cargo.toml
modules/local/src/: lib.rs
modules/manager/: Cargo.toml
modules/manager/src/: main.rs
modules/web/: Cargo.toml
modules/web/examples/: download.rs  small.rs
modules/web/src/: lib.rs
pallet/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: main.rs
