[workspace]
resolver = "2"
members = [
  "api",
  "api/persistent/ipfs",
  "api/persistent/local",
  "api/persistent/s3",
  "common",
  "modules/bench",
  "modules/gdown",
  "modules/ipfs/gateway",
  "modules/local",
  "modules/manager",
  "modules/web",
  "pallet",
  "runtime",
]
default-members = ["runtime"]
