[package]
name = "ipdis-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["s3"]
s3 = ["ipdis-api-persistent-s3"]

[dependencies]
ipis = { git = "https://github.com/ulagbulag-village/ipis" }
ipdis-api-persistent-s3 = { path = "./persistent/s3", optional = true }
ipdis-common = { path = "../common" }

[dev-dependencies]
bytecheck = "0.6"
rkyv = { version = "0.7", features = ["archive_be"] }
