[package]
name = "ipsis-modules-bench"
version = "0.1.0"
edition = "2021"

authors = ["Ho Kim <ho.kim@ulagbulag.io>"]
description = "InterPlanetary Storage Integration Service"
documentation = "https://docs.rs/ipsis"
license = "MIT OR Apache-2.0"
readme = "../../README.md"
homepage = "https://ulagbulag.io/"
repository = "https://github.com/ulagbulag-village/ipsis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipis = { git = "https://github.com/ulagbulag-village/ipis" }
ipiis-api = { git = "https://github.com/ulagbulag-village/ipiis" }
ipsis-common = { path = "../../common" }

byte-unit = { version = "4.0", features = ["serde"] }
clap = { version = "3.1", features = ["derive", "env", "unicode", "wrap_help"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
