[package]
name = "ipdis-modules-gdown"
version = "0.1.0"
edition = "2021"

authors = ["Ho Kim <ho.kim@ulagbulag.io>"]
description = "InterPlanetary Dictionary Server"
documentation = "https://docs.rs/ipdis"
license = "MIT OR Apache-2.0"
readme = "../../README.md"
homepage = "https://ulagbulag.io/"
repository = "https://github.com/ulagbulag-village/ipdis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipis = { git = "https://github.com/ulagbulag-village/ipis.git" }
ipdis-common = { path = "../../common" }

reqwest = { version = "0.11", features = ["cookies"] }

[dev-dependencies]
ipdis-api = { path = "../../api" }
