[package]
name = "ipsis-api-persistent-ipfs"
version = "0.1.0"
edition = "2021"

authors = ["Ho Kim <ho.kim@ulagbulag.io>"]
description = "InterPlanetary Storage Integration Service"
documentation = "https://docs.rs/ipsis"
license = "MIT OR Apache-2.0"
readme = "../../../README.md"
homepage = "https://ulagbulag.io/"
repository = "https://github.com/ulagbulag-village/ipsis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipis = { git = "https://github.com/ulagbulag-village/ipis", features = [
    "derive",
] }
ipiis-api = { git = "https://github.com/ulagbulag-village/ipiis" }
ipsis-common = { path = "../../../common" }

async-compat = "0.2"
http = "0.2"
ipfs-api = { package = "ipfs-api-backend-hyper", version = "0.5", features = [
    "with-builder",
    "with-send-sync",
] }
