[package]
name = "ipsis-api-persistent-s3"
version = "0.1.0"
edition = "2021"

authors = ["Ho Kim <ho.kim@ulagbulag.io>"]
description = "InterPlanetary Storage Integration Service"
documentation = "https://docs.rs/ipsis"
license = "MIT OR Apache-2.0"
readme = "../../../README.md"
homepage = "https://ulagbulag.io/"
repository = "https://github.com/ulagbulag-village/ipsis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipis = { git = "https://github.com/ulagbulag-village/ipis", features = [
    "derive",
] }
ipsis-api-persistent-common = { path = "../common" }

http = "0.2"
rust-s3 = { version = "0.32", default-features = false, features = [
    "tags",
    "tokio-rustls-tls",
    "with-tokio",
] }
# rust-s3 = { git = "https://github.com/ulagbulag-village/rust-s3", default-features = false, features = [
#     "tags",
#     "tokio-rustls-tls",
#     "with-tokio",
# ] }
